--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <body>
         <div id="console_wrapper">
             <div id="console">
-                <span id="log">Establishing connection...<br></span
+                <span id="log">Connecting...</span
                 ><span id="pre_input"
                     ><span class="green"
                         ><span id="user"></span
@@ -18,7 +18,7 @@
                         >:<span class="blue"
                             ><span id="path"></span> $ </span
                     ></span
-                ><span id="input"></span><span id="cursor">&nbsp;</span>
+                ><input id="input"><span id="pre_cursor"></span><span id="cursor">&nbsp;</span>
             </div>
         </div>
     </body>
