--- a/static/css/default.css
+++ b/static/css/default.css
@@ -23,7 +23,7 @@ body {
     padding: 40px 50px;
 }
 #log {
-    white-space: pre;
+    white-space: break-spaces;
 }
 #input {
     font-family: inherit;
