--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
         <meta charset="UTF-8">
         <title>{{website_title}}</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/default.css') }}">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
+        <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/socket.io.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/index.js') }}"></script>
     </head>
     <body>
