--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
     <body>
         <div id="console_wrapper">
             <div id="console">
-                <span id="log">Connecting...</span
-                ><span id="pre_input"
+                <span id="log"></span
+                ><span id="prompt"
                     ><span class="green"
                         ><span id="user"></span
                             >@<span id="machine"></span></span
