--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{{website_title}}</title>
+        <meta name="viewport" content="user-scalable=0" />
         <link rel="stylesheet" href="{{ url_for('static', filename='css/default.css') }}">
         <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/socket.io.min.js') }}"></script>
