--- a/static/css/default.css
+++ b/static/css/default.css
@@ -13,7 +13,7 @@ body {
     color: #ebdbb2;
     background-color: #282828;
     font-family: 'FiraCode', monospace;
-    font-size: 18px;
+    font-size: 17px;
 }
 b {
     font-weight: bold;
@@ -32,16 +32,16 @@ img {
     margin: 0;
     padding: 40px 50px;
 }
-@media screen and (min-width: 800px) {
+@media screen and (max-width: 800px) {
     #console {
-        padding: 20px 30px;
+        padding: 5px 10px;
     }
 }
 #log {
     white-space: break-spaces;
 }
 #input {
-    font-family: 18px;
+    font-family: inherit;
     font-size: inherit;
     padding: 0;
     margin: 0;
@@ -53,15 +53,6 @@ img {
     position: absolute;
     outline: none;
 }
-input[type='text'], textarea {
-    font-size: 18px;
-}
-select:focus,
-textarea:focus,
-input:focus,
-#input:focus {
-    font-size: 18px;
-}
 
 #pre_cursor {
     color: #00000000;
@@ -70,7 +61,7 @@ input:focus,
     box-shadow: 0 100px 0 #ebdbb2 inset;
 }
 
-.bright { color: #d3f5d870; text-shadow: 0 0 5px #ffffff70; }
+.bright { color: #b3d5c8; text-shadow: 0 0 5px #b3d5c8a0; }
 .background { color: #282828; }
 .default { color: #ebdbb2; }
 .blue, a { color: #83a598; }
