--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="user-scalable=0">
         <title>{{website_title}}</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/default.css') }}">
         <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
